@@ -1,3 +1,4 @@
+  - fix a cmake issue, data types supported by Trilinos and PETSc kernel libs should now be detected correctly
 phist-1.9.5
   - update contact information Jonas Thies
   - builtin kernels now use mpi_f08 module (adds type safety and prevents errors with
